--- a/index.html
+++ b/index.html
@@ -37,13 +37,14 @@
     <h1>portfolio-very-theme</h1>
     <!-- this is going to do whatever the tag's defaults are -->
     <h2>Default</h2>
-    <portfolio-very-theme></portfolio-very-theme>
-    <h2>Slot usage</h2>
-    <portfolio-very-theme data-accent="2" data-primary="17"><div>Sample slot content</div></portfolio-very-theme>
-    <h2>Property usage</h2>
-    <portfolio-very-theme id="example" title="Sample property title"></portfolio-very-theme>
+    <portfolio-very-theme>
+<portfolio-screen></portfolio-screen>
+
+    </portfolio-very-theme>
+    
   </div>
   <script type="module" src="./portfolio-very-theme.js"></script>
+  <script type="module" src="./portfolio-screen.js"></script>
 
   
   
