modified:   index.html

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <div id="screen-1">
         <portfolio-screen class="about" id="1" title="About">
           <p>This is the About section</p>
+          <img src="brooke_commitment.jpg"  >
           <p>Hello, my name is Brooke Connelly, and I am a second year Cybersecurity student. 
             I have always had a passion for technology. When I heard about a degree in Cybersecurity 
             I knew it was the path for me because it involved a career with technology and helping others. 
