--- a/index.html
+++ b/index.html
@@ -23,6 +23,26 @@
     portfolio-very-theme:hover {
       box-shadow: var(--ddd-boxShadow-sm);
     }
+    .profile {
+        width: 350px;
+        height: 500px;
+        border: 4px solid var(--ddd-theme-primary);
+      }
+      .description {
+        max-width: 700px;
+        text-align: left;
+        margin-left: auto;
+        font-size: var(--ddd-spacing-6);
+        padding-top: 10px;
+      }
+      .aboutContent {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: var(--ddd-spacing-4);
+        width: 100%;
+        padding-top: 90px;
+      }
     
   </style>
   <title>portfolio-very-theme</title>
@@ -41,19 +61,21 @@
       <div id="screen-1">
         <portfolio-screen class="about" id="1" title="About">
           <p>This is the About section</p>
-          <img src="brooke_commitment.jpg"  >
-          <p>Hello, my name is Brooke Connelly, and I am a second year Cybersecurity student. 
+          <div class="aboutContent">
+          <img src="brooke_commitment.jpg" class="profile" >
+          <p class="description">Hello, my name is Brooke Connelly, and I am a second year Cybersecurity student. 
             I have always had a passion for technology. When I heard about a degree in Cybersecurity 
             I knew it was the path for me because it involved a career with technology and helping others. 
             I am an active participant in multiple clubs such as the Competitive Cybersecurity Organization, 
             Women and Information Science and Technology and as well as an IST diplomat. Outside of my studies, 
             I enjoy spending time outdoors, swimming, and practicing photography.
             My goal is to leverage my education and passion to make a meaningful impact on the world.</p>
+          </div>
         </portfolio-screen>
       </div>
       <div id="screen-2">
-        <portfolio-screen class="Skills" id="2" title="Skills">
-          <p>This is the Skills section</p>
+        <portfolio-screen class="Resume" id="2" title="Resume">
+          <p>This is the Resume section</p>
         </portfolio-screen>
       </div>
       <div id="screen-3">
