modified:   index.html

--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
       <div id="screen-2">
         <portfolio-screen class="Resume" id="2" title="Resume">
           <p>This is the Resume section</p>
+          <p>Resume Overview:</p>
+          <p>I am a second year Cybersecurity student with a minor in Security Risk Analysis, 
+            expecting to graduate in May 2027. I am originally from Concord, North Carolina. 
+            I am a part of the competitive cybersecurity organization where I compete in different
+             competitions and also serve as secretary. Additionally, I am also an IST Diplomat, 
+             which is the ambassador for the college of IST. Some of my skills are 
+             Java, JavaScript, HTML, CSS, SQL, Azure DevOps, Ansible, Adobe Suite, and Photography. </p>
+             <a href="BrookeConnellyResumeFeb25.pdf">Link to Resume</a>
         </portfolio-screen>
       </div>
       <div id="screen-3">
